--- a/src/app/menu/menu.html
+++ b/src/app/menu/menu.html
@@ -1,8 +1,7 @@
 <nav class="menu">
-    <div class="menu-buttons">
-        <button>Inicio</button>
-        <button>Productos</button>
-        <button>Servicios</button>
+    <div class="Encabezado">
+        <p>Sistema Web de Monitoreo y Control de Seguridad Camaronera</p>
     </div>
     <button class="login-button" (click)="onLoginClick()">Iniciar Sesión</button>
+
 </nav>
