--- a/src/app/principal/principal.html
+++ b/src/app/principal/principal.html
@@ -1,3 +1,9 @@
+<div *ngIf="showLogin">
+    <app-login></app-login>
+</div>
+
+<!-- Resto del contenido de principal -->
+
 <div class="main-content">
     <h1>Mi primer Angular</h1>
     <p>Subtema o descripción aquí</p>
