--- a/src/app/lista-user/lista-user.html
+++ b/src/app/lista-user/lista-user.html
@@ -1,1 +1,13 @@
-<p>lista-user works!</p>
+<div class="user-list-container">
+    <h2>Lista de Usuarios</h2>
+
+    <div class="user-card" *ngFor="let usuario of usuarios">
+        <span class="user-name">{{ usuario.nombre }}</span>
+
+        <div class="actions">
+            <button class="btn edit">Editar</button>
+            <button class="btn delete">Eliminar</button>
+            <button class="btn view">Leer</button>
+        </div>
+    </div>
+</div>
