--- a/src/app/menu/menu.html
+++ b/src/app/menu/menu.html
@@ -1,6 +1,6 @@
 <nav class="menu">
     <div class="Encabezado">
-        <p>Sistema Web de Monitoreo y Control de Seguridad Camaronera</p>
+        <p>Monitoreo Camaronera</p>
     </div>
     <button class="login-button" (click)="onLoginClick()">Iniciar Sesión</button>
 
