--- a/src/app/menu/menu.html
+++ b/src/app/menu/menu.html
@@ -2,6 +2,11 @@
     <div class="Encabezado">
         <p>Monitoreo Camaronera</p>
     </div>
+    <button matButton [matMenuTriggerFor]="menu">Menu</button>
+    <mat-menu #menu="matMenu">
+        <button mat-menu-item>Item 1</button>
+        <button mat-menu-item>Item 2</button>
+    </mat-menu>
     <button class="login-button" (click)="onLoginClick()">Iniciar Sesión</button>
 
 </nav>
