--- a/src/app/copyright/copyright.css
+++ b/src/app/copyright/copyright.css
@@ -1,6 +1,6 @@
 /* Estilo del texto de copyright */
 .copyright-text {
-    background: linear-gradient(90deg, #006994, #00a8b5);
+    background: linear-gradient(90deg, #072e75, #002ab5);
     /* azul marino a turquesa */
     color: #e0f7fa;
     /* azul claro */
