--- a/src/app/principal/principal.css
+++ b/src/app/principal/principal.css
@@ -2,7 +2,7 @@
 .main-content {
     height: calc(90vh - 60px);
     /* altura total menos el menú */
-    background-color: #87CEEB;
+    background-color: #1b8ebb;
     /* celeste */
     display: flex;
     flex-direction: column;
