--- a/src/app/menu/menu.html
+++ b/src/app/menu/menu.html
@@ -6,7 +6,7 @@
     <!-- Módulo 1: Usuarios -->
     <button mat-button [matMenuTriggerFor]="menuUsuarios">Usuarios</button>
     <mat-menu #menuUsuarios="matMenu">
-        <button mat-menu-item routerLink="#">...</button>
+        <button mat-menu-item routerLink="./registrar">Registro</button>
         <button mat-menu-item routerLink="#">...</button>
     </mat-menu>
 
@@ -37,5 +37,7 @@
         <button mat-menu-item routerLink="#">...</button>
         <button mat-menu-item routerLink="#">...</button>
     </mat-menu>
-    <button class="login-button" (click)="onLoginClick()">Iniciar Sesión</button>
+    <div class="login">
+        <button class="login-button" mat-menu-item routerLink="./login">Iniciar Sesión</button>
+    </div>
 </nav>
