--- a/src/app/lista-user/lista-user.html
+++ b/src/app/lista-user/lista-user.html
@@ -6,8 +6,8 @@
 
         <div class="actions">
             <button class="btn edit">Editar</button>
-            <button class="btn delete">Eliminar</button>
-            <button class="btn view">Leer</button>
+            <button class="btn delete" (click)="eliminarUsuario(usuario)">Eliminar</button>
+            <button class="btn view" (click)="leerUsuario(usuario)">Leer</button>
         </div>
     </div>
 </div>
