--- a/src/app/menu/menu.html
+++ b/src/app/menu/menu.html
@@ -7,7 +7,7 @@
     <button mat-button [matMenuTriggerFor]="menuUsuarios">Usuarios</button>
     <mat-menu #menuUsuarios="matMenu">
         <button mat-menu-item routerLink="./registrar">Registro</button>
-        <button mat-menu-item routerLink="#">...</button>
+        <button mat-menu-item routerLink="./lista">Lista</button>
     </mat-menu>
 
     <!-- Módulo 2: Monitoreo -->
