--- a/src/app/registrar-user/registrar-user.html
+++ b/src/app/registrar-user/registrar-user.html
@@ -21,6 +21,8 @@
         <label for="correo">Correo electrónico</label>
         <input type="email" id="correo" name="correo" placeholder="ejemplo@correo.com" required>
 
+        <label for="correo">Contraseña</label>
+        <input type="password" id="password" name="password" placeholder="**********" required>
         <label for="rol">Rol</label>
         <select id="rol" name="rol" required>
             <option value="">Seleccione...</option>
