--- a/src/app/lista-user/lista-user.html
+++ b/src/app/lista-user/lista-user.html
@@ -1,7 +1,7 @@
 <div class="user-list-container">
     <h2>Lista de Usuarios</h2>
 
-    <div class="user-card" *ngFor="let usuario of usuarios">
+    <div class="user-card" *ngFor="let usuario of Usuario">
         <span class="user-name">{{ usuario.nombre }}</span>
 
         <div class="actions">
