--- a/src/app/registrar-user/registrar-user.html
+++ b/src/app/registrar-user/registrar-user.html
@@ -1,17 +1,16 @@
 <div class="container">
     <h2>Registro de Usuario</h2>
-    <form id="registroForm">
+
+    <form #registroForm="ngForm" (ngSubmit)="guardarEmpleado()">
+
         <label for="nombre">Nombre</label>
-        <input type="text" id="nombre" name="nombre" placeholder="Ingrese su nombre" required>
-
+        <input type="text" id="nombre" name="nombre" [(ngModel)]="Usuario.nombre" required>
         <label for="apellido">Apellido</label>
-        <input type="text" id="apellido" name="apellido" placeholder="Ingrese su apellido" required>
-
+        <input type="text" id="apellido" name="apellido" [(ngModel)]="Usuario.apellido" required>
         <label for="edad">Edad</label>
-        <input type="number" id="edad" name="edad" min="18" max="80" placeholder="Ingrese su edad" required>
-
+        <input type="number" id="edad" name="edad" [(ngModel)]="Usuario.edad" min="18" max="80" required>
         <label for="genero">Género</label>
-        <select id="genero" name="genero" required>
+        <select id="genero" name="genero" [(ngModel)]="Usuario.genero" required>
             <option value="">Seleccione...</option>
             <option value="Masculino">Masculino</option>
             <option value="Femenino">Femenino</option>
@@ -19,12 +18,13 @@
         </select>
 
         <label for="correo">Correo electrónico</label>
-        <input type="email" id="correo" name="correo" placeholder="ejemplo@correo.com" required>
+        <input type="email" id="correo" name="correo" [(ngModel)]="Usuario.correo" required>
 
-        <label for="correo">Contraseña</label>
-        <input type="password" id="password" name="password" placeholder="**********" required>
+        <label>Contraseña</label>
+        <input type="password" id="password" name="password" [(ngModel)]="Usuario.password" required>
+
         <label for="rol">Rol</label>
-        <select id="rol" name="rol" required>
+        <select id="rol" name="rol" [(ngModel)]="Usuario.rol" required>
             <option value="">Seleccione...</option>
             <option value="Administrador">Administrador</option>
             <option value="Supervisor">Supervisor</option>
