--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -14,7 +14,7 @@
 
             <button type="submit">Ingresar</button>
             <p class="signup-link">
-                ¿No tienes cuenta? <a href="#">Regístrate</a>
+                ¿No tienes cuenta? <a (click)="irARegistro()">Regístrate</a>
             </p>
         </form>
     </div>
