--- a/src/app/principal/principal.html
+++ b/src/app/principal/principal.html
@@ -2,7 +2,13 @@
     <app-login></app-login>
 </div>
 <div class="main-content">
-    <h1>Mi primer Angular</h1>
+
+    <h1>Sistema Web de Control y Seguridad en Costa Camarón</h1>
     <p></p>
-    <p>Subtema o descripción aquí</p>
+    <p class="lead mt-3 w-75">
+        Bienvenidos a <strong>Costa Camarón</strong> una empresa dedicada a la producción sostenible y eficiente de
+        camarón de alta calidad. Contamos con instalaciones modernas, personal altamente capacitado y procesos
+        certificados que
+        garantizan un producto confiable para mercados nacionales e internacionales..
+    </p>
 </div>
