--- a/src/app/login/login.css
+++ b/src/app/login/login.css
@@ -4,7 +4,7 @@ html {
     height: 100%;
     margin: 0;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(135deg, #006994, #00a8b5);
+    background: linear-gradient(135deg, #0E3A56, #00a8b5);
 }
 
 /* Contenedor general */
