--- a/src/app/menu/menu.css
+++ b/src/app/menu/menu.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(90deg, #000a68, #00a2ff);
+    background: linear-gradient(90deg, #0E3A56, #00a2ff);
     color: white;
     padding: 10px 30px;
     font-family: 'Poppins', sans-serif;
