--- a/src/app/copyright/copyright.css
+++ b/src/app/copyright/copyright.css
@@ -1,8 +1,8 @@
 /* Estilo del texto de copyright */
 .copyright-text {
-    background: linear-gradient(90deg, #072e75, #002ab5);
+    background: linear-gradient(90deg, #ffffff, #ffffff);
     /* azul marino a turquesa */
-    color: #e0f7fa;
+    color: #0A2533;
     /* azul claro */
     text-align: center;
     padding: 15px 10px;
