--- a/src/app/principal/principal.html
+++ b/src/app/principal/principal.html
@@ -2,13 +2,14 @@
     <app-login></app-login>
 </div>
 <div class="main-content">
-
-    <h1>Sistema Web de Control y Seguridad en Costa Camarón</h1>
-    <p></p>
-    <p class="lead mt-3 w-75">
-        Bienvenidos a <strong>Costa Camarón</strong> una empresa dedicada a la producción sostenible y eficiente de
-        camarón de alta calidad. Contamos con instalaciones modernas, personal altamente capacitado y procesos
-        certificados que
-        garantizan un producto confiable para mercados nacionales e internacionales..
-    </p>
+    <section class="hero d-flex flex-column justify-content-center align-items-start text-white px-3">
+        <h1 class="display-5 fw-bold">Sistema Web de Control y Seguridad en Costa Camarón</h1>
+        <p></p>
+        <p class="lead mt-3 w-75">
+            Bienvenidos a <strong>Costa Camarón</strong> una empresa dedicada a la producción sostenible y eficiente de
+            camarón de alta calidad. Contamos con instalaciones modernas, personal altamente capacitado y procesos
+            certificados que garantizan un producto confiable para mercados nacionales e internacionales..
+        </p>
+        <button class="btn btn-light btn-lg mt-3 rounded-pill">Conoce más</button>
+    </section>
 </div>
