--- a/src/app/copyright/copyright.html
+++ b/src/app/copyright/copyright.html
@@ -1,3 +1,3 @@
 <p class="copyright-text">
-    © 2025 Sistema Web de Monitoreo y Control de Seguridad en Instalaciones Camaroneras. Todos los derechos reservados.
+    © 2025 Costa Camarón. Todos los derechos reservados.
 </p>
