--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -4,12 +4,14 @@
         <form (ngSubmit)="onSubmit()">
             <div class="input-group">
                 <label for="email">Correo</label>
-                <input type="email" id="email" placeholder="Ingresa tu correo" required>
+                <input type="email" id="email" [(ngModel)]="usuario" name="usuario" placeholder="Ingresa tu correo"
+                    required>
             </div>
 
             <div class="input-group">
                 <label for="password">Contraseña</label>
-                <input type="password" id="password" placeholder="Ingresa tu contraseña" required>
+                <input type="password" id="password" [(ngModel)]="clave" name="clave"
+                    placeholder="Ingresa tu contraseña" required>
             </div>
 
             <button type="submit">Ingresar</button>
